                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-06-2006 changed: Updated Python ControlLabel to accept angle parameter, thanks to Nuka1195.
 - 02-06-2006 fixed: [ 1472413 ] Xlink: Hosting twice should not be possible
 - 02-06-2006 fixed: my programs used my videos shares for startup parameter determination.
 - 02-06-2006 fixed: Lock Settings in context menu was broken
 - 02-06-2006 fixed: Settings and Filemanager lock was broken
 - 02-06-2006 added: hidden gui setting videfiles.hidedirectorynames due to wide public demand =). set to true using advancedsettings.xml
 - 01-06-2006 changed: order of icon and time in xbmc.notification. syntax is now xbmc.notification(header,message,time,icon).
 - 01-06-2006 fixed: cdda ripper didn't apply fatx filtering to file names properly.
 - 01-06-2006 updated: French language file
 - 01-06-2006 changed: xbmc.notification now takes an optional time to display (in ms) as a parameter.
 - 01-06-2006 changed: All gui settings to lower case only.
 - 01-06-2006 changed: xbmc.notification now takes an optional icon as param.
 - 31-05-2006 fixed: folder.jpg should now work in My Pictures.
 - 31-05-2006 fixed: Add Network location didn't update the mediasources list.
 - 31-05-2006 changed: Cleaned up a few unnecessary settings.
 - 31-05-2006 fixed: [ 1496367 ] playselected pos in playlist.
 - 31-05-2006 changed: New my programs system is now the default.  Removed old code.
 - 31-05-2006 changed: Cleaned up the animation code a little.
 - 30-05-2006 fixed: Url sharename was not cloned (causing smb errors)
 - 29-05-2006 fixed: Startup windows based on the old system weren't working when the startup window was set to Home.